--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="index.css">
 
-    <link rel="shortcut icon" type="image/x-icon" href="../Images/Logo_Small.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="../Media/Images/Logo_Small.ico" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
