--- a/index.html
+++ b/index.html
@@ -172,18 +172,16 @@
             <p>
                 Holy Now (Live in London):
             </p>
-            <div class="embed-responsive embed-responsive-16by9 mb-5">
-                <iframe class="embed-responsive-item"
-                        src="https://www.youtube.com/embed/sK6vAcrYB4M?si=5_uaYGFOrgSQiKma"
+            <div class="ratio ratio-16x9">
+                <iframe src="https://www.youtube.com/embed/sK6vAcrYB4M?si=5_uaYGFOrgSQiKma"
                         allowfullscreen
                         referrerpolicy="strict-origin-when-cross-origin"></iframe>
             </div>
             <p>
                 VVhales:
             </p>
-            <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item"
-                        src="https://www.youtube.com/embed/1hMCX8CdUh4?si=n06d8dd5Pzzo8VA-"
+            <div class="ratio ratio-16x9">
+                <iframe src="https://www.youtube.com/embed/1hMCX8CdUh4?si=n06d8dd5Pzzo8VA-"
                         allowfullscreen
                         referrerpolicy="strict-origin-when-cross-origin"></iframe>
             </div>
